// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseCard Renders default (vertical) non-interactive card 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  transition-property: box-shadow;
  transition-duration: 300ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
}

.emotion-1 {
  box-sizing: border-box;
}

.emotion-2 {
  box-sizing: border-box;
  padding: 8px 4px;
}

.emotion-2 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-3 {
  margin-bottom: 20px;
}

.emotion-4 {
  font-family: "Source Serif Pro",serif;
  font-size: 20px;
  line-height: 1.2;
  font-weight: 600;
  letter-spacing: 0;
  padding: 1px 0px;
}

.emotion-4::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.128125em;
}

.emotion-4::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3125em;
}

.emotion-5 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0a0a0a;
}

.emotion-5 svg {
  fill: #0a0a0a;
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  color: #2e2e2e;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-6 svg {
  fill: #2e2e2e;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <section
            class="emotion-4"
          >
            <h1
              class="nk-headline-heading emotion-5"
            >
              Non-interactive Vertical Card
            </h1>
          </section>
        </div>
        <p
          class="emotion-6"
        >
          Text
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BaseCard Renders horizontal interactive card 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: rowfalse;
  -ms-flex-direction: rowfalse;
  flex-direction: rowfalse;
  transition-property: box-shadow;
  transition-duration: 300ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-1 {
    min-width: 1px;
  }
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 24px;
}

.emotion-2 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-3 {
  margin-bottom: 20px;
}

.emotion-4 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
}

.emotion-4 .nk-headline-kicker {
  color: #0a68c1;
}

.emotion-4:hover:not(:disabled) .nk-headline-kicker {
  color: #02509b;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:active:not(:disabled) .nk-headline-kicker {
  color: #01396e;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:visited:not(:disabled) .nk-headline-kicker {
  color: #7547a3;
}

.emotion-4 .nk-headline-heading {
  color: #0a0a0a;
}

.emotion-4 .nk-headline-heading svg {
  fill: #0a0a0a;
}

.emotion-4:before {
  content: '';
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  z-index: 1;
}

.emotion-5 {
  font-family: "Source Serif Pro",serif;
  font-size: 20px;
  line-height: 1.2;
  font-weight: 600;
  letter-spacing: 0;
  padding: 1px 0px;
}

.emotion-5::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.128125em;
}

.emotion-5::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3125em;
}

.emotion-6 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0a0a0a;
}

.emotion-6 svg {
  fill: #0a0a0a;
}

.emotion-7 {
  margin: 0;
  padding: 1px 0;
  color: #2e2e2e;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-7 svg {
  fill: #2e2e2e;
}

.emotion-7::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-7::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <a
            class="nk-card-link emotion-4"
            href="newskit.com"
          >
            <section
              class="emotion-5"
            >
              <h1
                class="nk-headline-heading emotion-6"
              >
                Interactive Horizontal Card
              </h1>
            </section>
          </a>
        </div>
        <p
          class="emotion-7"
        >
          Text
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BaseCard Renders horizontal non-interactive card 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: rowfalse;
  -ms-flex-direction: rowfalse;
  flex-direction: rowfalse;
  transition-property: box-shadow;
  transition-duration: 300ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-1 {
    min-width: 1px;
  }
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 8px 4px;
}

.emotion-2 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-3 {
  margin-bottom: 20px;
}

.emotion-4 {
  font-family: "Source Serif Pro",serif;
  font-size: 20px;
  line-height: 1.2;
  font-weight: 600;
  letter-spacing: 0;
  padding: 1px 0px;
}

.emotion-4::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.128125em;
}

.emotion-4::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3125em;
}

.emotion-5 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0a0a0a;
}

.emotion-5 svg {
  fill: #0a0a0a;
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  color: #2e2e2e;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-6 svg {
  fill: #2e2e2e;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <section
            class="emotion-4"
          >
            <h1
              class="nk-headline-heading emotion-5"
            >
              Non-interactive Horizontal Card
            </h1>
          </section>
        </div>
        <p
          class="emotion-6"
        >
          Text
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BaseCard Renders vertical interactive card 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  transition-property: box-shadow;
  transition-duration: 300ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
}

.emotion-1 {
  box-sizing: border-box;
}

.emotion-2 {
  box-sizing: border-box;
  padding: 24px;
}

.emotion-2 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-3 {
  margin-bottom: 20px;
}

.emotion-4 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
}

.emotion-4 .nk-headline-kicker {
  color: #0a68c1;
}

.emotion-4:hover:not(:disabled) .nk-headline-kicker {
  color: #02509b;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:active:not(:disabled) .nk-headline-kicker {
  color: #01396e;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:visited:not(:disabled) .nk-headline-kicker {
  color: #7547a3;
}

.emotion-4 .nk-headline-heading {
  color: #0a0a0a;
}

.emotion-4 .nk-headline-heading svg {
  fill: #0a0a0a;
}

.emotion-4:before {
  content: '';
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  z-index: 1;
}

.emotion-5 {
  font-family: "Source Serif Pro",serif;
  font-size: 20px;
  line-height: 1.2;
  font-weight: 600;
  letter-spacing: 0;
  padding: 1px 0px;
}

.emotion-5::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.128125em;
}

.emotion-5::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3125em;
}

.emotion-6 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0a0a0a;
}

.emotion-6 svg {
  fill: #0a0a0a;
}

.emotion-7 {
  margin: 0;
  padding: 1px 0;
  color: #2e2e2e;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-7 svg {
  fill: #2e2e2e;
}

.emotion-7::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-7::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <a
            class="nk-card-link emotion-4"
            href="newskit.com"
          >
            <section
              class="emotion-5"
            >
              <h1
                class="nk-headline-heading emotion-6"
              >
                Interactive Horizontal Card
              </h1>
            </section>
          </a>
        </div>
        <p
          class="emotion-7"
        >
          Text
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
